style: increase text color to fix contrast ratio issue

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -45,7 +45,7 @@
 
 a,
 a:visited {
-  color: #007dbd;
+  color: #007db5;
   text-decoration: none;
 }
 
